[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "learn_wgpu"

[dependencies]
cfg-if = "1"
env_logger = "0.10"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.18"
winit = "0.28"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0.79"
cgmath = "0.18.0"
tobj = { version = "3.2.1", features = [ "async" ] }
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
# wgpu = { version = "0.18", default-features = false, features = [ "webgl" ] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "hdr"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
